Improve playback visuals and offline audio